<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f2e5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.annguyen.contactsapp.MainActivity">

    <TextView
        android:text="@string/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/textView"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btnContact"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnContact"
        android:layout_marginTop="53dp"
        android:textSize="32sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundbtn" />

    <Button
        android:text="@string/button2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/button2"
        android:textSize="32sp"
        android:layout_below="@+id/btnContact"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundbtn" />

    <Button
        android:text="@string/button3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:id="@+id/button3"
        android:textSize="32sp"
        android:background="@drawable/roundbtn" />

</RelativeLayout>
